Update: finished home

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,9 @@
 .App {
+    /* display: flex;
+    flex-direction: column;
     width: 100%;
     max-width: 1440px;
     margin: auto;
+    height: 100%;
+    min-height: 750px; */
 }
