--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,10 +1,10 @@
 .Banner {
-    margin-bottom: 100px;
+    margin-bottom: 5px;
 }
 
 .banner_header_text {
     font-family: var(--secondary-font-family);
-    font-size: var(--larger-font-size);
+    font-size: var(--large-font-size);
     padding: 25px;
     text-align: left;
     text-transform: uppercase;
@@ -31,7 +31,7 @@
 }
 
 .banner_regular_text {
-    font-size: var(--semilarge-font-size);
+    font-size: var(--biggest-font-size);
     font-weight: var(--medium-font-weight);
     line-height: 50px;
     text-transform: uppercase;
