--- a/src/components/GetToKnow/GetToKnow.module.css
+++ b/src/components/GetToKnow/GetToKnow.module.css
@@ -8,7 +8,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 25px;
-    margin-bottom: 25px;
 }
 
 .section_header_text {
@@ -23,6 +22,7 @@
     text-decoration: none;
     text-transform: uppercase;
     color: var(--primary-color);
+    font-weight: var(--medium-font-weight);
 }
 
 .section_header_button svg {
@@ -41,7 +41,6 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-    height: 400px;
     color: var(--white-color);
 }
 
@@ -62,20 +61,21 @@
 .know_more_subtitle {
     margin-top: auto;
     line-height: 16px;
+    font-size: var(--semi-medium-font-size);
     font-weight: var(--regular-font-weight);
     width: 85%;
 }
 
 .know_more_image {
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-end;
     width: 50%;
     height: 400px;
     overflow: hidden;
 }
 
 .know_more_image img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
