--- a/src/components/SeeAll/SeeAll.module.css
+++ b/src/components/SeeAll/SeeAll.module.css
@@ -1,14 +1,14 @@
 .SeeAll {
     display: flex;
     flex-direction: column;
+    margin-bottom: 40px;
 }
 
 .section_header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 25px;
-    margin-bottom: 50px;
+    padding: 25px 25px 0;
 }
 
 .section_header_text {
@@ -26,6 +26,7 @@
     text-decoration: none;
     text-transform: uppercase;
     color: var(--primary-color);
+    font-weight: var(--medium-font-weight);
 }
 
 .section_header_button svg {
@@ -33,7 +34,60 @@
     font-size: 24px;
 }
 
-.carosel_item_subtitle{
+.carosel{
     display: flex;
     flex-direction: row;
+}
+
+.carosel_item {
+    padding: 25px;
+}
+
+.carosel_item_name {
+    font-size: var(--biggest-font-size);
+    font-weight: var(--medium-font-weight);
+    text-transform: uppercase;
+    line-height: 50px;
+    margin-bottom: 15px;
+}
+
+.carosel_item_subtitle {
+    display: flex;
+    flex-direction: row;
+    font-size: var(--regular-font-size);
+    margin-bottom: 15px;
+}
+.carosel_description {
+    line-height: 14px;
+    width: 50%;
+}
+
+.carosel_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--primary-color);
+    font-size: 14px;
+    margin-left: auto;
+    font-weight: var(--medium-font-weight);
+}
+.carosel_button svg {
+    color: var(--secondary-color);
+    font-size: 16px;
+}
+
+.carosel_image_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+}
+
+.carosel_image_container img{
+    width: 100%;
+    height: auto;
 }
